# genie-in-the-bottle

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: substack_daily.yml
api/: index.py  test.py  webhook_juggernaut.py  webhook_telegram.py
backend/: pyproject.toml  requirements.txt
backend/api/: __init__.py
backend/config/: substack_accounts.yaml
backend/src/: config.py  main.py  openai_client.py  substack_processor.py
backend/src/database/: __init__.py  db_connection.py  external_db.py  handle_tweets_data.py  internal_db.py  read_juggernaut_feeds.py
backend/src/telegram/: __init__.py  bot.py
backend/src/tweet_generation/: __init__.py  composer.py  guardian_composer.py
backend/src/tweet_generation/substack/: __init__.py  composer.py  content_cleaner.py  feed_reader.py
backend/src/x_platform/: __init__.py  client.py
src/: __init__.py  main.py
src/tweet_generation/: composer.py
